--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<lang="html">
 <head>
     <title>HANNA-LEENA KELOTTIJÄRVI</title>
     <meta charset="utf8">
@@ -25,7 +25,7 @@
 
 <div class="content row">
     <div class="column">
-        <img src="omakuva.jpg">
+        <img src="omakuva.jpg" alt="Kuva Hanna-Leena Kelottijärvi">
     </div>
     <div class="column">
         <h2>Tervehdys!</h2>
