--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="fi">
 <head>
     <title>HANNA-LEENA KELOTTIJÄRVI</title>
-    <meta charset="utf8">
+    <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
@@ -25,7 +25,7 @@
 
 <div class="content row">
     <div class="column">
-        <img src="omakuva.jpg">
+        <img src="omakuva.jpg" alt="Kuva Hanna-Leena Kelottijärvi">
     </div>
     <div class="column">
         <h2>Tervehdys!</h2>
