--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div class="content row">
     <div class="column">
-        <img src="omakuva.jpg" alt="Kuva Hanna-Leena Kelottijärvi">
+        <img src="omakuva.jpg" alt="Kuva Hanna-Leena Kelottijärvi"class=center>
     </div>
     <div class="column">
         <h2>Tervehdys!</h2>
