--- a/koulutus.html
+++ b/koulutus.html
@@ -27,7 +27,7 @@
         <p>Koulutustiedot, uusimmasta vanhimpaan</p>
         <div>
             <ul1>
-                <li>2022- Tradenomi, liiketalous, Haaga-Helia ammattikorkeakoulu</li>
+                <li>2022- Tradenomi, liiketalous, Haaga-Helia amk</li>
                 <li>2012-2018 Kasvatustieteen maisteri, KM, Lapin yliopisto</li>
                 <li>2010-2013 Ylioppilas, Lyseonpuiston lukio</li>
             </ul1>
