--- a/tyokokemus.html
+++ b/tyokokemus.html
@@ -27,10 +27,10 @@
         <h2>Työkokemus</h2>
         <p>Työkokemus uusimmasta vanhimpaan</p>
         <ul1>
-            <li>2023- Koulutussuunnittelija, Laurea ammattikorkeakoulu</li>
-            <li>2021-2022 Opintoneuvoja, Haaga-Helia ammattikorkeakoulu</li>
-            <li>2020-2021 Opintosuunnittelija, Lapin ammattikorkeakoulu</li>
-            <li>2019 Projektisuunnittelija, Lapin ammattikorkeakoulu</li>
+            <li>2023- Koulutussuunnittelija, Laurea amk</li>
+            <li>2021-2022 Opintoneuvoja, Haaga-Helia amk</li>
+            <li>2020-2021 Opintosuunnittelija, Lapin amk</li>
+            <li>2019 Projektisuunnittelija, Lapin amk</li>
             <li>2015-2019 Ravintolatyöntekijä, Cafe & Bar 21</li>
             <li>2011-2015 Kahvilatyöntekijä, Ravintola Napatapuli</li>
         </ul1>
